--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Search Music REST</string>
+
+    <string name="empty_message">Aún no haz realizado\nninguna busqueda</string>
+
 </resources>
